# CmakeSetup

./: .gitignore  CMakeLists.txt  README.md  build_commands.txt
Libs/Glad/Debug/GLES_3_0_Core/include/glad/: glad.h
Libs/Glad/Debug/GLES_3_0_Core/src/: glad.c
Libs/Glad/Debug/GLES_3_2_Core/include/glad/: glad.h
Libs/Glad/Debug/GLES_3_2_Core/src/: glad.c
Libs/Glad/Debug/GL_4_1_Core/include/glad/: glad.h
Libs/Glad/Debug/GL_4_1_Core/src/: glad.c
Libs/Glad/Debug/GL_4_6_Core/include/glad/: glad.h
Libs/Glad/Debug/GL_4_6_Core/src/: glad.c
Libs/Glad/Release/GLES_3_0_Core/include/glad/: glad.h
Libs/Glad/Release/GLES_3_0_Core/src/: glad.c
Libs/Glad/Release/GLES_3_2_Core/include/glad/: glad.h
Libs/Glad/Release/GLES_3_2_Core/src/: glad.c
Libs/Glad/Release/GL_4_1_Core/include/glad/: glad.h
Libs/Glad/Release/GL_4_1_Core/src/: glad.c
Libs/Glad/Release/GL_4_6_Core/include/glad/: glad.h
Libs/Glad/Release/GL_4_6_Core/src/: glad.c
Src/: Includer.h  Main.cpp
Src/Game/: Game.cpp  Game.hpp
Src/Game/Misc/: ImguiFlags.txt
Src/Game/Rendering/: Colors.hpp
Src/Game/Rendering/TextureManager/: TextureManager.cpp  TextureManager.hpp
Src/Platform/: ErrorReportingOpenGL.cpp  Main.cpp  Main.hpp  MainWindow.cpp  MainWindow.hpp
libs/Glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/stb/: stb.cpp
src/game/: game.cpp  game.hpp
src/game/rendering/: colors.hpp
src/game/rendering/textureManager/: textureManager.cpp  textureManager.hpp
src/game/tools/: colors.hpp  size_in_percent.h  x_in_percent.hpp
src/game/tools/image_manager/: imageManager.cpp  imageManager.hpp
src/platform/: errorReportingOpenGL.cpp  errorReportingOpenGL.hpp  mainWindow.cpp  mainWindow.hpp
